--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <div class="flex items-center space-x-3 space-x-reverse mb-2 md:mb-0">
           <!-- تم تكبير أيقونة الهرم إلى text-4xl -->
           <i class="fas fa-pyramid w-10 h-10 gold-color text-4xl"></i>
-          <img src="/imegs/logo.png" alt="imge" class="w-[140px] h-[120px]" />
+          <img src="images/logo.png" alt="imge" class="w-[140px] h-[120px]" />
           <h1 class="text-2xl gold-color font-extrabold tracking-wider ml-5">
             عاشق التاريخ
           </h1>
