--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       /* تخصيص خط عربي مناسب */
       @import url("https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;700;900&display=swap");
@@ -383,9 +387,14 @@
               class="w-[50px] h-[50px] md:w-[150px] md:h-[150px]"
             />
             <h1
-              class="text-xl md:text-2xl gold-color font-extrabold tracking-wider ml-5 md:ml-0 hidden md:inline-block"
+              class="text-xl md:text-2xl font-extrabold tracking-wider ml-5 md:ml-0 hidden md:inline-block"
+              style="
+                font-family: 'Aref Ruqaa', serif;
+                color: #d4af37;
+                letter-spacing: 2px;
+              "
             >
-              عاشق التاريخ
+              مستر صبري عاشق التاريخ
             </h1>
           </div>
 
@@ -474,6 +483,28 @@
             >
               <i class="fas fa-lock ml-2"></i> يُرجى تسجيل الدخول أو انتظار
               موافقة المدير للوصول إلى المحتوى.
+            </p>
+            <p
+              class="leading-relaxed text-lg text-center md:text-right"
+              style="
+                font-family: 'Reem Kufi Ink', sans-serif;
+                line-height: 2;
+                color: #f5deb3;
+                text-shadow: 2px 2px 4px rgba(212, 176, 12, 0.425);
+                letter-spacing: 1px;
+                font-weight: bold;
+                text-align: center;
+                margin-bottom: 30px;
+              "
+            >
+              مستر صبري هو عاشقٌ للتاريخ، سافر عبر صفحاته وأزمنه ليعيد للأذهان
+              عبق الماضي وروعة الحاضر. كرّس رحلته التعليمية لنشر الوعي بتاريخ
+              أمتنا المجيد، وإحياء سِيَر الأجداد العظام الذين صنعوا المجد
+              بالحكمة والعلم والإرادة. يؤمن أن دراسة التاريخ ليست مجرد معرفة
+              بالماضي، بل هي رسالة لبناء الحاضر واستشراف المستقبل. من خلال دروسه
+              ومحتواه، يسعى مستر صبري إلى أن يجعل التاريخ ينبض بالحياة في قلوب
+              طلابه، ليشعروا بأنهم امتداد لأمةٍ عظيمة تستحق أن تُروى حكايتها
+              جيلاً بعد جيل.
             </p>
             <a
               href="#lessons-section"
